--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@
   .footer {
     min-width: 720px;
     margin: auto;
-    width: 92%
+    width: 92%;
   }
 } 
 
@@ -19,7 +19,7 @@
     .footer {
       min-width: 186px;
       margin: auto;
-      width: 95%
+      width: 95%;
     }
   } 
 
