--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,9 @@
 
 .page {
   max-width: 1280px;
-  margin: 0 auto; 
+  margin: 0 auto;
   background: #2A2C2F;
-  font-family: 'Inter', Arial, sans-serif;;
+  font-family: 'Inter', Arial, sans-serif;
   color: #FFF;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
