--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,10 @@
   text-decoration: none;
 }
 
+.footer__link:hover{
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 600px) {
   .footer__link {
     margin-bottom: 32px;
