--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,6 +12,7 @@
 @media screen and (max-width: 600px) {
   .cover__subtitle {
     font-size: 14px;
+    margin-top: 16px;
     line-height: 1.14;
     min-width: 288px;
   }
