--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -8,6 +8,10 @@
   line-height: 1.17;
 }
 
+.header__lang-link:hover{
+  opacity: 0.8;
+}
+
 @media screen and (max-width: 600px) {
   .header__lang-link {
     font-size: 18px;
