--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,20 +11,21 @@
   .header {
     min-width: 720px;
     margin: auto;
-    width: 92%;
+    width: 91%;
   }
 } 
 
 @media screen and (max-width: 768px) {
   .header {
     min-width: 288px;
-    margin: auto;
     width: 95%;
   }
 } 
 
 @media screen and (max-width: 600px) {
   .header {
+    padding-left: 16px;
+    padding-right: 16px;
     padding-top: 16px;
   }
 } 
