--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,24 +1,45 @@
 .lead{
-  padding-top: 62px;
-  width: 77%;
-  min-width: 928px;
-  margin: auto;
+  padding-top: 56px;
+  padding-left: 100px;
+  padding-right: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+@media screen and (max-width: 1184px) {
+  .lead{
+    padding-left: calc((100vw - 984px) / 2);
+    padding-right: calc((100vw - 984px) / 2);
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .lead{
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
  .lead {
-    min-width: 750px;
-    width: 92%;
+    padding-top: 48px;
+    padding-left: calc((100vw - 928px) / 2);
+    padding-right: calc((100vw - 928px) / 2);
   }
 } 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 928px) {
+  .lead{
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+
+@media screen and (max-width: 790px) {
   .lead {
-     min-width: 300px;
      width: 100%;
+     min-width: 300px;
    }
  } 
-
