--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,7 @@
 .photo-grid{
   padding-top: 92px;
-  margin-left: 48px;
-  margin-right: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
@@ -9,21 +9,29 @@
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-     min-width: 720px;
-     margin: auto;
-     width: 92%;
-   }
- }
-
- @media screen and (max-width: 768px) {
-  .photo-grid {
-     min-width: 288px;
-     width: 95%;
-   }
+     padding-left: calc(48px - ((1024px - 100vw) / 2));
+     padding-right: calc(48px - ((1024px - 100vw) / 2));
+     gap: 14px;
+  }
 } 
+ 
+@media screen and (max-width: 976px) {
+  .photo-grid {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .photo-grid {
+    padding-top: 88px;
+  }
+}
 
 @media screen and (max-width: 600px) {
   .photo-grid {
+    padding-left: 16px;
+    padding-right: 16px;
     padding-top: 64px;
     gap: 12px;
   }
