--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,21 @@
 .place__paragraph {
-  margin: 0 0 28px;
+  margin: 0 0 27px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.63;
 }
+
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}  
+
+@media screen and (max-width: 900px) {
+  .place__paragraph {
+    font-size: 16px;
+    margin: 0 0 25px;
+  }
+} 
 
 @media screen and (max-width: 600px) {
 .place__paragraph {
