--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,13 +8,14 @@
 
 @media screen and (max-width: 900px) {
   .place__title {
-    font-size: 42px;
+    font-size: 43px;
   }
 } 
 
 @media screen and (max-width: 600px) {
   .place__title {
     font-size: 32px;
-    margin-left: 2.5vw;
+    margin-left: 16px;
+    margin-left: 16px;
   }
 } 
