--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,7 +2,7 @@
   max-width: 984px;
   margin-bottom: 80px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(338px, 47%) 1fr;
   grid-template-rows: min-content 1fr;
   row-gap: 48px;
   column-gap: 40px;
@@ -10,6 +10,19 @@
 
 .place:last-child {
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 900px) {  
+  .place {
+    column-gap: 28px;
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (max-width: 760px) {  
+  .place {
+    grid-template-columns: 47% 1fr;
+  }
 }
 
 @media screen and (max-width: 600px) {
