--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,29 +1,45 @@
 .places{
-    padding-top: 92px;
-    padding-bottom: 92px;
-    margin:auto;
-    width: 77%;
-    min-width: 928px;
+  padding-top: 92px;
+  padding-bottom: 92px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+@media screen and (max-width: 1184px) {
+  .places{
+    padding-left: calc((100vw - 984px) / 2);
+    padding-right: calc((100vw - 984px) / 2);
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .places{
+    padding-left: 48px;
+    padding-right: 48px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
   .places {
-     min-width: 720px;
-     width: 92%;
-   }
+     padding-left: calc(48px - ((1024px - 100vw) / 2));
+     padding-right: calc(48px - ((1024px - 100vw) / 2));
+     gap: 14px;
+  }
 } 
-
-@media screen and (max-width: 768px) {
+ 
+@media screen and (max-width: 976px) {
   .places {
-     min-width: 568px;
-     width: 95%;
-   }
-} 
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
 
 @media screen and (max-width: 600px) {
   .places {
-    min-width: 288px;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 64px;
+    padding-bottom: 66px;
     width: 100%;
   }
 } 
