--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,7 @@
 @import url(../vendor/normalize.css);
+@import url(./fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/place/__link/place__link.css);
 @import url(../blocks/place/__url-heading/place__url-heading.css);
 @import url(../blocks/footer/footer.css);
@@ -25,6 +27,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list-span/intro__list-span.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
