--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,26 +1,18 @@
 .footer {
     padding-top: 92px;
     padding-bottom: 24px;
-    margin-left: 48px;
-    margin-right: 48px;
+    padding-left: 48px;
+    padding-right: 48px;
     display: flex;
     justify-content: space-between;
 }
 
-@media screen and (max-width: 1024px) {
-  .footer {
-    min-width: 720px;
-    margin: auto;
-    width: 92%;
-  }
-} 
-
 @media screen and (max-width: 768px) {
     .footer {
-      min-width: 186px;
-      width: 95%;
-    }
-  } 
+      padding-left: 24px;
+      padding-right: 24px;
+  }
+} 
 
 @media screen and (max-width: 750px) {
   .footer {
@@ -31,6 +23,7 @@
 
 @media screen and (max-width: 600px) {
   .footer {
+    min-width: 100px;
     padding-left: 16px;
     padding-right: 16px;
   }
