--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,23 +2,15 @@
   display: flex;
   justify-content: space-between;
   max-width: 1184px;
-  margin-left: 48px;
-  margin-right: 48px;
+  padding-left: 48px;
+  padding-right: 48px;
   padding-top: 28px;
 }
 
-@media screen and (max-width: 1024px) {
-  .header {
-    min-width: 720px;
-    margin: auto;
-    width: 91%;
-  }
-} 
-
 @media screen and (max-width: 768px) {
   .header {
-    min-width: 288px;
-    width: 95%;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 } 
 
