--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -33,5 +33,7 @@
 @media screen and (max-width: 600px) {
   .intro {
     padding-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
 } 
