--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,10 +1,22 @@
-.photo-grid{
+.photo-grid {
   padding-top: 92px;
-  padding-left: 48px;
-  padding-right: 48px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
+}
+
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+     padding-left: calc((1280px - 100vw) / 2);
+     padding-right: calc((1280px - 100vw) / 2);
+  }
+}
+
+@media screen and (max-width: 1184px) {
+  .photo-grid {
+     padding-left: 48px;
+     padding-right: 48px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
@@ -14,7 +26,7 @@
      gap: 14px;
   }
 } 
- 
+
 @media screen and (max-width: 976px) {
   .photo-grid {
     padding-left: 24px;
