--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,6 +9,11 @@
 @media screen and (max-width: 750px) {
   .footer__copyright {
     margin-top: 62px;
-    
+  }
+} 
+
+@media screen and (max-width: 600px) {
+  .footer__copyright {
+    margin-top: 48px;
   }
 } 
