--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -7,7 +7,7 @@
 @media screen and (max-width: 600px) {
     .place__website {
       margin-top: 32px;
-      margin-left: 2.5vw;
+      margin-left: 16px;
       margin-bottom: 32px;
     }
   } 
