--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,13 +1,46 @@
 .cover__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 740px;
+  cursor: pointer;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: #fff;
   text-decoration: none;
+}
+
+.cover__overlay::before {
+  content:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2A2C2F;
+  opacity: 0.3;
+}
+
+.cover__overlay:hover::before {
+   opacity: 0.8;
+}
+
+@media screen and (max-width: 1140px){
+  .cover__overlay {
+    min-height: 640px;
+  }
+}
+@media screen and (max-width: 984px){
+  .cover__overlay {
+    min-height: 480px;
+  }
+}
+@media screen and (max-width: 568px){
+  .cover__overlay {
+    min-height: 200px;
+  }
 }
